--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.6.0",
     "convex": "^1.16.0",
     "next": "14.2.9",
     "react": "^18",
