--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.6.0",
     "convex": "^1.16.0",
     "next": "14.2.9",
+    "openai": "^4.62.1",
     "react": "^18",
     "react-dom": "^18"
   },
