--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "@mui/styled-engine-sc": "^6.1.1",
     "convex": "^1.16.0",
+    "mui": "^0.0.1",
     "next": "14.2.9",
     "openai": "^4.62.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
